[gd_scene load_steps=2 format=3 uid="uid://b8xmwk0c8tn7d"]

[ext_resource type="Script" uid="uid://dsevp8l6w4lx0" path="res://general_ui/main_menu.gd" id="1_gqlqt"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gqlqt")

[node name="MainContentContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="Label" parent="MainContentContainer"]
layout_mode = 2
text = "Harvest 306"

[node name="StartButton" type="Button" parent="MainContentContainer"]
layout_mode = 2
text = "Start"

[node name="OptionsButton" type="Button" parent="MainContentContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="MainContentContainer"]
layout_mode = 2
text = "Quit"

[node name="OptionsLayer" type="CanvasLayer" parent="."]
layer = 2

[connection signal="pressed" from="MainContentContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainContentContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainContentContainer/QuitButton" to="." method="_on_quit_button_pressed"]
